sdk_tests/tests/read-write-macro-fail/state_struct_enum_missing_discriminant.stderr
error: proc-macro derive panicked
 --> tests/read-write-macro-fail/state_struct_enum_missing_discriminant.rs:4:10
  |
4 | #[derive(ReadWriteState)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: Attribute 'discriminant' is required for struct enum variants
