sdk_tests/tests/read-write-macro-fail/state_struct_enum_missing_discriminant.rs
#![no_main]
use read_write_state_derive::ReadWriteState;

#[derive(ReadWriteState)]
enum EnumWithMissingDiscriminant {
    #[discriminant(1)]
    Variant { some_field: u8 },
    Variant1 { other: u8 },
}